<resources>
    <string name="app_name">BeaconProject</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="entrence">Entrance</string>
    <string name="featured">Featured</string>
    <string name="exampelText">Childhood friends Patricia Delfine and Laurence Armstead didn\'t expect to see each other again, after parting ways under mysterious circumstances during high school...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Event">Event</string>
    <string name="Recommended">Recommended</string>
    <string name="music">Music</string>
    <string name="architecture">Architecture</string>
    <string name="sci_fi">Sci-fi</string>

</resources>
